[gd_scene load_steps=19 format=2]

[ext_resource path="res://gameover.gd" type="Script" id=1]
[ext_resource path="res://assets/RPG, manga , quadrinhos , cultura em geral_ Pixel art gif cavernas de lava-0000.jpg" type="Texture" id=2]
[ext_resource path="res://assets/BLACKBALL.otf" type="DynamicFontData" id=3]
[ext_resource path="res://GUI/Comfortaa-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Coins/MonedaD.png" type="Texture" id=5]
[ext_resource path="res://Coins/MonedaP.png" type="Texture" id=6]
[ext_resource path="res://assets/sounds/Death Is Just Another Path.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=8]
resource_name = "Spin"
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=11]
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.00113, 1.0001 )
texture = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -173.0
margin_bottom = -77.0

[node name="GAME OVER" type="VBoxContainer" parent="CenterContainer"]
margin_left = 331.0
margin_right = 693.0
margin_bottom = 96.0

[node name="Label" type="Label" parent="CenterContainer/GAME OVER"]
margin_right = 362.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -150.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer2"]
margin_left = 455.0
margin_top = 32.0
margin_right = 568.0
margin_bottom = 118.0

[node name="Restart" type="Button" parent="CenterContainer2/VBoxContainer"]
margin_right = 113.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
text = "Restart"
flat = true

[node name="Quit" type="Button" parent="CenterContainer2/VBoxContainer"]
margin_top = 45.0
margin_right = 113.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 3 )
text = "Quit"
flat = true

[node name="Score" type="CenterContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -40.0
margin_bottom = 170.0

[node name="VBoxContainer" type="VBoxContainer" parent="Score"]
margin_left = 443.0
margin_top = 45.0
margin_right = 580.0
margin_bottom = 164.0

[node name="Score" type="HBoxContainer" parent="Score/VBoxContainer"]
margin_right = 137.0
margin_bottom = 37.0

[node name="Label" type="Label" parent="Score/VBoxContainer/Score"]
margin_right = 114.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 4 )
text = "Score: "

[node name="Label2" type="Label" parent="Score/VBoxContainer/Score"]
margin_left = 118.0
margin_right = 137.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="Gold" type="HBoxContainer" parent="Score/VBoxContainer"]
margin_top = 41.0
margin_right = 137.0
margin_bottom = 78.0

[node name="Sprite" type="Sprite" parent="Score/VBoxContainer/Gold"]
position = Vector2( -23, 17 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
hframes = 5
frame = 4

[node name="Label" type="Label" parent="Score/VBoxContainer/Gold"]
margin_right = 104.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 6 )
text = "Ouro: "

[node name="Label2" type="Label" parent="Score/VBoxContainer/Gold"]
margin_left = 108.0
margin_right = 127.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 7 )
text = "0"

[node name="Anim" type="AnimationPlayer" parent="Score/VBoxContainer/Gold"]
autoplay = "Spin"
anims/Spin = SubResource( 8 )

[node name="Silver" type="HBoxContainer" parent="Score/VBoxContainer"]
margin_top = 82.0
margin_right = 137.0
margin_bottom = 119.0

[node name="Sprite" type="Sprite" parent="Score/VBoxContainer/Silver"]
position = Vector2( -23, 17 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
hframes = 5
frame = 4

[node name="Label" type="Label" parent="Score/VBoxContainer/Silver"]
margin_right = 108.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 9 )
text = "Prata: "

[node name="Label2" type="Label" parent="Score/VBoxContainer/Silver"]
margin_left = 112.0
margin_right = 131.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 10 )
text = "0"

[node name="Anim" type="AnimationPlayer" parent="Score/VBoxContainer/Silver"]
autoplay = "Spin"
anims/Spin = SubResource( 11 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
[connection signal="pressed" from="CenterContainer2/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="CenterContainer2/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
